--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.7",
     "jsqr": "^1.4.0",
     "next": "13.4.7",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.0-rc.6",
